--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         // Load the pre-generated card deck from JSON file
         async function loadCardDeck() {
             try {
-                const response = await fetch('taboo_cards.json');
+                const response = await fetch('cards.json');
                 if (!response.ok) {
                     throw new Error(`Failed to load card deck: ${response.status} ${response.statusText}`);
                 }
