Add extended taboo card deck and update references

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
         // Load the pre-generated card deck from JSON file
         async function loadCardDeck() {
             try {
-                const response = await fetch('./cards.json');
+                const response = await fetch('./cards_extended.json');
                 if (!response.ok) {
                     throw new Error(`Failed to load card deck: ${response.status} ${response.statusText}`);
                 }
